--- a/index.html
+++ b/index.html
@@ -1,1 +1,220 @@
-E ae.
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Allex Vissoci</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Allex Vissoci</a></h1>
+						<!-- <nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="generic.html">Generic</a></li>
+											<li><a href="elements.html">Elements</a></li>
+											<li><a href="#">Sign Up</a></li>
+											<li><a href="#">Log In</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav> -->
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>Allex Vissoci</h2>
+							<p>Desenvolvedor Web<br />
+							Curitiba, Paraná<br /></p>
+							<ul class="actions">
+								<li>
+									<a href="https://www.linkedin.com/in/allex-fernando-vissoci-030201121/" target="_new">
+										<i class="fa fa-linkedin"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/allexvissoci" target="_new">
+										<i class="fa fa-github-alt"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">Learn More</a>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Apresentação</h2>
+								<br />
+
+								<p>Sou um Desenvolvedor Web que gosta da mistura de música, café e programação.<br />
+
+								Sou interessado sempre em aprender e melhorar minhas habilidades técnicas<br />
+								Solucionar problemas e desafios com soluções criativas, inteligentes de forma ágil.<br /><br />
+								Formado em Análise e Desenvolvimento de Sistemas e<br />
+								Pós Graduado em Engenharia de Software pela <br />
+								Universidade Federal do Paraná - UFPR</p>
+
+							</header>
+							<ul class="icons major">
+								
+								<li><span class="icon fa-headphones major style2"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-coffee major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fa-code major style2"><span class="label">Dolor</span></span></li>
+							</ul>
+						</div>
+					</section>
+				<!-- Two -->
+					<section id="two" class="wrapper style5 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Resumo de Qualificações</h2>
+								<br />
+							</header>
+							<ul class="icons major">
+								<li><span class="fab fa-python major2"><span class="label"></span></span><p>Python</p></li>
+								<li><span class="fab fa-php major2"><span class="label"></span></span><p>PHP</p></li>
+								<li><span class="fab fa-java major2"><span class="label"></span></span><p>Java</p></li>
+								<li><span class="fab fa-js-square major2"><span class="label"></span></span><p>JavaScript</p></li>
+								<li><span class="fab fa-html5 major2"><span class="label"></span></span><p>HTML</p></li>
+								<li><span class="fas fa-database major2"><span class="label"></span></span><p>PostgreSql</p></li>
+							</ul>
+							<ul class="icons major">
+								<li><span class="fab fa-git major2"><span class="label"></span></span><p>Git</p></li>
+								<li><span class="fab fa-github major2"><span class="label"></span></span><p>GitHub</p></li>
+								<li><span class="fab fa-linux major2"><span class="label"></span></span><p>Linux</p></li>
+								<li><span class="fas fa-database major2"><span class="label"></span></span><p>MySql</p></li>
+								<li><span class="fab fa-css3-alt major2"><span class="label"></span></span><p>CSS</p></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="three" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<h2>Magna primis lobortis<br />
+								sed ullamcorper</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>Tortor dolore feugiat<br />
+								elementum magna</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Augue eleifend aliquet<br />
+								sed condimentum</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Four -->
+					<section id="four" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Accumsan mus tortor nunc aliquet</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
+								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-paper-plane-o">
+									<h3>Arcu accumsan</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-laptop">
+									<h3>Ac Augue Eget</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Mus Scelerisque</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-headphones">
+									<h3>Mauris Imperdiet</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-heart-o">
+									<h3>Aenean Primis</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+								<li class="icon fa-flag-o">
+									<h3>Tortor Ut</h3>
+									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Arcue ut vel commodo</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+							</header>
+							<ul class="actions vertical">
+								<li><a href="#" class="button fit special">Activate</a></li>
+								<li><a href="#" class="button fit">Learn More</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/allex-fernando-vissoci-030201121/" target="_new" class='fa fa-linkedin'></a></li>
+							<li><a href="https://github.com/allexvissoci" target="_new" class="fa fa-github-alt"></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
+<style>
+	a{
+		border-bottom: 0;
+	}
+</style>
