adicionando resumo de qualificacoes e experiencias profissionais

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 							<ul class="actions">
 								<li>
 									<a href="https://www.linkedin.com/in/allex-fernando-vissoci-030201121/" target="_new">
-										<i class="fa fa-linkedin"></i>
+										<i class="fa fa-linkedin" style="font-size:25px;"></i>
 									</a>
 								</li>
 								<li>
 									<a href="https://github.com/allexvissoci" target="_new">
-										<i class="fa fa-github-alt"></i>
+										<i class="fa fa-github-alt" style="font-size:25px;"></i>
 									</a>
 								</li>
 							</ul>
@@ -101,6 +101,7 @@
 								<li><span class="fab fa-js-square major2"><span class="label"></span></span><p>JavaScript</p></li>
 								<li><span class="fab fa-html5 major2"><span class="label"></span></span><p>HTML</p></li>
 								<li><span class="fas fa-database major2"><span class="label"></span></span><p>PostgreSql</p></li>
+								<li>ZendFramework</li>
 							</ul>
 							<ul class="icons major">
 								<li><span class="fab fa-git major2"><span class="label"></span></span><p>Git</p></li>
@@ -108,6 +109,7 @@
 								<li><span class="fab fa-linux major2"><span class="label"></span></span><p>Linux</p></li>
 								<li><span class="fas fa-database major2"><span class="label"></span></span><p>MySql</p></li>
 								<li><span class="fab fa-css3-alt major2"><span class="label"></span></span><p>CSS</p></li>
+								<li>Django</li>
 							</ul>
 						</div>
 					</section>
@@ -115,78 +117,110 @@
 				<!-- Two -->
 					<section id="three" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/calcpoker.png" alt="" /></div><div class="content">
+								<h2>CalcPoker</h2>
+								<a href="https://github.com/allexvissoci/pokercalc" target="_new"> https://github.com/allexvissoci/pokercalc</a>
+								<a href="http://calcpoker.herokuapp.com" target="_new">http://calcpoker.herokuapp.com</a>
+								<br><br>
+								<p>Sistema destinado a jogadores de poker. Ele calcula a porcentagem do usuário acertar um jogo específico, dado as cartas conhecidas.</p>
+								<ul class="icons major">
+									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/soas.png" alt="" /></div><div class="content">
+								<h2>SOAS - Sistema de Otimização de Agendamento de Serviços</h2>
+								<a href="https://github.com/allexvissoci/SOAS" target="_new"> https://github.com/allexvissoci/SOAS</a>
+								<a href="http://rpmsul.herokuapp.com/login/?next=/">http://rpmsul.herokuapp.com/login/?next=/</a>
+								<br><br>
+								<p>Sistema utilizado por uma empresa de manutenção industrial preditiva, para gerenciar os agendamentos de serviços, evitando conflitos de equipamentos em uso e funcionários no mesmo dia/horário.</p>
+								<ul class="icons major">
+									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
+									<li>Django</li>
+									<li>PostgreSql</li>
+								</ul>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/kdachave.png" alt="" /></div><div class="content">
+								<h2>kdachave</h2>
+								<a href="https://github.com/allexvissoci/kdachave" target="_new"> https://github.com/allexvissoci/kdachave</a>
+								<a href="http://kdachave.herokuapp.com/">http://kdachave.herokuapp.com/</a>
+								<br><br>
+								<p>Sistema direcionado para imobiliarias e empresas de monitoramento, para controlar as chaves dos imovéis que são responsáveis.</p>
+								<ul class="icons major">
+									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
+									<li>Django</li>
+									<li>PostgreSql</li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>PEAP - Portal Educacional para Alunos e Professores</h2>
+								<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
+								<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/handle/1884/54629</a>
+								<br><br>
+								<p>Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
+								<ul class="icons major">
+									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+									<li><span class="fab fa-java iconlist"><span class="label"></span></span></li>
+									<li>MySql</li>
+								</ul>
 							</div>
 						</section>
 					</section>
 
 				<!-- Four -->
-					<section id="four" class="wrapper style3 special">
+					<section id="four" class="wrapper special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Experiências Profissionais</h2>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Meta - Desenvolvedor PHP Pleno</h3>
+									<p>12/2017 - Atual<br />
+									Empresa de desenvolvimento de softwares.</p><br />
+									<p>- Desenvolvimento de software utilizando linguagem PHP</p>
+									<p>- Banco de dados PostgreSQL</p>
 								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								<li class="icon"></li>
+								<li class="icon"></li>
 								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Pinhão Tecnologia - Desenvolvedor PHP e Python</h3>
+									<p>09/2016 - 12/2017<br />
+									Empresa de desenvolvimento de softwares.</p><br />
+									<p>- Desenvolvimento de software utilizando linguagem PHP e ZendFramework</p>
+									<p>- Desenvolvimento de Software utilizando a linguagem Python com Django Framework</p>
+									<p>- Banco de dados MySQL.</p>
 								</li>
 								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>PG Mais Resultado - Técnico Operacional</h3>
+									<p>02/2015 - 09/2016<br />
+									Empresa de cobrança especializada em canais de comunicação que realiza o envio de Cartas, SMS, Email, URA, enriquecimento, chat e B.A.</p><br />
+									<p>- Monitoramento de servidores Linux, CentOS para envio de SMS</p>
+									<p>- Monitoramento e supervisão de sistemas internos</p>
+									<p>- Manuseio de banco de dados MySQL</p>
+									<p>- Analise de infraestrutura</p>
+									<p>- Desenvolvimento de sistemas automatizadores de processos com PHP e Python</p>
 								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
+								<li class="icon"></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
-							</ul>
-						</div>
-					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
