--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<!-- Two -->
 					<section id="three" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/calcpoker.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/calcpoker.jpg" alt="" /></div><div class="content">
 								<h2>CalcPoker</h2>
 								<a href="https://github.com/allexvissoci/pokercalc" target="_new"> https://github.com/allexvissoci/pokercalc</a>
 								<a href="http://calcpoker.herokuapp.com" target="_new">http://calcpoker.herokuapp.com</a>
@@ -131,7 +131,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/soas.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/soas.jpg" alt="" /></div><div class="content">
 								<h2>SOAS - Sistema de Otimização de Agendamento de Serviços</h2>
 								<a href="https://github.com/allexvissoci/SOAS" target="_new"> https://github.com/allexvissoci/SOAS</a>
 								<a href="http://rpmsul.herokuapp.com/login/?next=/">http://rpmsul.herokuapp.com/login/?next=/</a>
@@ -148,7 +148,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/kdachave.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/kdachave.jpg" alt="" /></div><div class="content">
 								<h2>kdachave</h2>
 								<a href="https://github.com/allexvissoci/kdachave" target="_new"> https://github.com/allexvissoci/kdachave</a>
 								<a href="http://kdachave.herokuapp.com/">http://kdachave.herokuapp.com/</a>
