adicionando logo das empresas

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 								<h2>PEAP - Portal Educacional para Alunos e Professores</h2>
 								<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
 								<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/handle/1884/54629</a>
-								<br><br>
+								<br /><br />
 								<p>Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
 								<ul class="icons major">
 									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
@@ -184,40 +184,50 @@
 
 				<!-- Four -->
 					<section id="four" class="wrapper special">
-						<div class="inner">
+						<div>
 							<header class="major">
 								<h2>Experiências Profissionais</h2>
 							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Meta - Desenvolvedor PHP Pleno</h3>
-									<p>12/2017 - Atual<br />
-									Empresa de desenvolvimento de softwares.</p><br />
-									<p>- Desenvolvimento de software utilizando linguagem PHP</p>
-									<p>- Banco de dados PostgreSQL</p>
-								</li>
-								<li class="icon"></li>
-								<li class="icon"></li>
-								<li class="icon fa-headphones">
-									<h3>Pinhão Tecnologia - Desenvolvedor PHP e Python</h3>
-									<p>09/2016 - 12/2017<br />
-									Empresa de desenvolvimento de softwares.</p><br />
-									<p>- Desenvolvimento de software utilizando linguagem PHP e ZendFramework</p>
-									<p>- Desenvolvimento de Software utilizando a linguagem Python com Django Framework</p>
-									<p>- Banco de dados MySQL.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>PG Mais Resultado - Técnico Operacional</h3>
-									<p>02/2015 - 09/2016<br />
-									Empresa de cobrança especializada em canais de comunicação que realiza o envio de Cartas, SMS, Email, URA, enriquecimento, chat e B.A.</p><br />
-									<p>- Monitoramento de servidores Linux, CentOS para envio de SMS</p>
-									<p>- Monitoramento e supervisão de sistemas internos</p>
-									<p>- Manuseio de banco de dados MySQL</p>
-									<p>- Analise de infraestrutura</p>
-									<p>- Desenvolvimento de sistemas automatizadores de processos com PHP e Python</p>
-								</li>
-								<li class="icon"></li>
-							</ul>
+							<section id="three" class="wrapper alt">
+								<section class="spotlight">
+									<div class="image"><img src="images/meta.jpg" alt="" /></div><div class="content">
+										<h2>Meta - Desenvolvedor PHP Pleno</h2>
+										<p>12/2017 - Atual<br />
+										Empresa de desenvolvimento de softwares.</p>
+										<ul class="icons major" style="text-align:left;">
+											<li>- Desenvolvimento de software utilizando linguagem PHP</li>
+											<li>- Banco de dados PostgreSQL</li>
+										</ul>
+									</div>
+								</section>
+								<section class="spotlight">
+									<div class="image" style="background-color: white;"><img src="images/pinhao.png" alt=""/></div><div class="content">
+										<h2>Pinhão Tecnologia - Desenvolvedor PHP e Python</h2>
+										<p>09/2016 - 12/2017<br />
+										Empresa de desenvolvimento de softwares.</p>
+										<ul class="icons major" style="text-align:left;">
+											<li>- Desenvolvimento de software utilizando linguagem PHP e ZendFramework</li>
+											<li>- Desenvolvimento de Software utilizando a linguagem Python com Django Framework</li>
+											<li>- Banco de dados MySQL.</li>
+										</ul>
+									</div>
+								</section>
+								<section class="spotlight">
+									<div class="image"><img src="images/pg.jpg" alt="" /></div><div class="content">
+										<h2>PG Mais Resultado - Técnico Operacional</h2>
+										<p>02/2015 - 09/2016<br />
+										Empresa de cobrança especializada em canais de comunicação que realiza o envio de Cartas, SMS, Email, URA, enriquecimento, chat e B.A.</p>
+										<ul class="icons major" style="text-align:left;">
+											<li>- Monitoramento de servidores Linux, CentOS para envio de SMS</li>
+											<li>- Monitoramento e supervisão de sistemas internos</li>
+											<li>- Manuseio de banco de dados MySQL</li>
+											<li>- Analise de infraestrutura</li>
+											<li>- Desenvolvimento de sistemas automatizadores de processos com PHP e Python</li>
+										</ul>
+									</div>
+								</section>
+							</section>
+							
 						</div>
 					</section>
 
