adicionando formulário de contato

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 					</section>
 
 				<!-- Four -->
-					<section id="four" class="wrapper special">
+					<section id="four" class="wrapper special" style="padding: 6em 0 0em 0">
 						<div>
 							<header class="major">
 								<h2>Experiências Profissionais</h2>
@@ -227,13 +227,40 @@
 									</div>
 								</section>
 							</section>
-							
 						</div>
 					</section>
 
-
+					<section class="footer-contato" style="padding: 3em 0 4em 0; background-color: #1d242a; text-align: center;">
+						<h4>Contato</h4>
+						<form method="post" action="#">
+							<div class="row uniform">
+								<div class="6u 12u$(xsmall)">
+									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+								</div>
+								<div class="6u$ 12u$(xsmall)">
+									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+								</div>
+								<div class="12u$">
+									<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+								</div>
+								<div class="12u$">
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="special" /></li>
+										<li><input type="reset" value="Reset" /></li>
+									</ul>
+								</div>
+							</div>
+						</form>
+						<div>
+							<span>(41) 99981-4484 | (41) 99239-1394</span>
+						</div>
+					</section>
 				<!-- Footer -->
 					<footer id="footer">
+							<!-- <div class="inner"> -->
+						
+							<!-- </div> -->
+						<!-- </section> -->
 						<ul class="icons">
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							<li><a href="https://www.linkedin.com/in/allex-fernando-vissoci-030201121/" target="_new" class='fa fa-linkedin'></a></li>
