--- a/index.html
+++ b/index.html
@@ -232,16 +232,16 @@
 
 					<section class="footer-contato" style="padding: 3em 0 4em 0; background-color: #1d242a; text-align: center;">
 						<h4>Contato</h4>
-						<form method="post" action="#">
+						<form method="post" action="https://formspree.io/allex.vissoci@gmail.com">
 							<div class="row uniform">
 								<div class="6u 12u$(xsmall)">
-									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+									<input type="text" name="name" id="demo-name" value="" placeholder="Name" />
 								</div>
 								<div class="6u$ 12u$(xsmall)">
-									<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+									<input type="email" name="_replyto" id="demo-email" value="" placeholder="Email" />
 								</div>
 								<div class="12u$">
-									<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+									<textarea name="demo-message" id="message" placeholder="Enter your message" rows="6"></textarea>
 								</div>
 								<div class="12u$">
 									<ul class="actions">
