--- a/index.html
+++ b/index.html
@@ -167,10 +167,12 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
 								<h2>PEAP - Portal Educacional para Alunos e Professores</h2>
-								<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
-								<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/handle/1884/54629</a>
+								
 								<br /><br />
-								<p>Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
+								<p>
+									<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
+									<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/handle/1884/54629</a>
+								Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
 								<ul class="icons major">
 									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
 									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
