adicionando título para projetos

--- a/index.html
+++ b/index.html
@@ -114,72 +114,78 @@
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="three" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/calcpoker.jpg" alt="" /></div><div class="content">
-								<h2>CalcPoker</h2>
-								<a href="https://github.com/allexvissoci/pokercalc" target="_new"> https://github.com/allexvissoci/pokercalc</a>
-								<a href="http://calcpoker.herokuapp.com" target="_new">http://calcpoker.herokuapp.com</a>
+				<!-- Three -->
+					<section id="three" class="wrapper alt style2 special">
+						<div>
+							<header class="major">
 								<br><br>
-								<p>Sistema destinado a jogadores de poker. Ele calcula a porcentagem do usuário acertar um jogo específico, dado as cartas conhecidas.</p>
-								<ul class="icons major">
-									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/soas.jpg" alt="" /></div><div class="content">
-								<h2>SOAS - Sistema de Otimização de Agendamento de Serviços</h2>
-								<a href="https://github.com/allexvissoci/SOAS" target="_new"> https://github.com/allexvissoci/SOAS</a>
-								<a href="http://rpmsul.herokuapp.com/login/?next=/">http://rpmsul.herokuapp.com/login/?next=/</a>
-								<br><br>
-								<p>Sistema utilizado por uma empresa de manutenção industrial preditiva, para gerenciar os agendamentos de serviços, evitando conflitos de equipamentos em uso e funcionários no mesmo dia/horário.</p>
-								<ul class="icons major">
-									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
-									<li>Django</li>
-									<li>PostgreSql</li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/kdachave.jpg" alt="" /></div><div class="content">
-								<h2>kdachave</h2>
-								<a href="https://github.com/allexvissoci/kdachave" target="_new"> https://github.com/allexvissoci/kdachave</a>
-								<a href="http://kdachave.herokuapp.com/">http://kdachave.herokuapp.com/</a>
-								<br><br>
-								<p>Sistema direcionado para imobiliarias e empresas de monitoramento, para controlar as chaves dos imovéis que são responsáveis.</p>
-								<ul class="icons major">
-									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
-									<li>Django</li>
-									<li>PostgreSql</li>
-								</ul>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/peap.png" alt="" /></div><div class="content">
-								<h2>PEAP - Portal Educacional para Alunos e Professores</h2>
-								<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
-								<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/</a>
-								<br /><br />
-								<p>Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
-								<ul class="icons major">
-									<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
-									<li><span class="fab fa-java iconlist"><span class="label"></span></span></li>
-									<li>MySql</li>
-								</ul>
-							</div>
-						</section>
+								<h2>Projetos</h2>
+							</header>
+							<section class="spotlight">
+								<div class="image"><img src="images/calcpoker.jpg" alt="" /></div><div class="content">
+									<h2>CalcPoker</h2>
+									<a href="https://github.com/allexvissoci/pokercalc" target="_new"> https://github.com/allexvissoci/pokercalc</a>
+									<a href="http://calcpoker.herokuapp.com" target="_new">http://calcpoker.herokuapp.com</a>
+									<br><br>
+									<p>Sistema destinado a jogadores de poker. Ele calcula a porcentagem do usuário acertar um jogo específico, dado as cartas conhecidas.</p>
+									<ul class="icons major">
+										<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+									</ul>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/soas.jpg" alt="" /></div><div class="content">
+									<h2>SOAS - Sistema de Otimização de Agendamento de Serviços</h2>
+									<a href="https://github.com/allexvissoci/SOAS" target="_new"> https://github.com/allexvissoci/SOAS</a>
+									<a href="http://rpmsul.herokuapp.com/login/?next=/">http://rpmsul.herokuapp.com/login/?next=/</a>
+									<br><br>
+									<p>Sistema utilizado por uma empresa de manutenção industrial preditiva, para gerenciar os agendamentos de serviços, evitando conflitos de equipamentos em uso e funcionários no mesmo dia/horário.</p>
+									<ul class="icons major">
+										<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
+										<li>Django</li>
+										<li>PostgreSql</li>
+									</ul>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/kdachave.jpg" alt="" /></div><div class="content">
+									<h2>kdachave</h2>
+									<a href="https://github.com/allexvissoci/kdachave" target="_new"> https://github.com/allexvissoci/kdachave</a>
+									<a href="http://kdachave.herokuapp.com/">http://kdachave.herokuapp.com/</a>
+									<br><br>
+									<p>Sistema direcionado para imobiliarias e empresas de monitoramento, para controlar as chaves dos imovéis que são responsáveis.</p>
+									<ul class="icons major">
+										<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-python iconlist"><span class="label"></span></span></li>
+										<li>Django</li>
+										<li>PostgreSql</li>
+									</ul>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/peap.png" alt="" /></div><div class="content">
+									<h2>PEAP - Portal Educacional para Alunos e Professores</h2>
+									<a href="https://github.com/allexvissoci/PEAP" target="_new"> https://github.com/allexvissoci/PEAP</a>
+									<a href="https://acervodigital.ufpr.br/handle/1884/54629">https://acervodigital.ufpr.br/</a>
+									<br /><br />
+									<p>Sistema Educacional que gerencia disciplinas, matérias, turnos, matrícula de alunos e professores. Também possuí a funcionalidade de aplicar provas on-line.</p>
+									<ul class="icons major">
+										<li><span class="fab fa-html5 iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-css3-alt iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-js-square iconlist"><span class="label"></span></span></li>
+										<li><span class="fab fa-java iconlist"><span class="label"></span></span></li>
+										<li>MySql</li>
+									</ul>
+								</div>
+							</section>
+						</div>
 					</section>
 
 				<!-- Four -->
