alterando learn more para portugues

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Ler Mais</a>
 					</section>
 
 				<!-- One -->
